digito-ui/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digito-ui
  labels:
    app: digito
    type: ui
spec:
  selector:
    matchLabels:
      app: digito
      type: ui
  replicas: 2
  progressDeadlineSeconds: 120
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: digito
        type: ui
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: digito
                    type: ui
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: digito-ui
          image: jtalk/digito-ui:[[IMAGE_TAG]]
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 50M
            requests:
              cpu: 10m
              memory: 30M
          startupProbe:
            periodSeconds: 5
            failureThreshold: 6
            httpGet:
              path: /
              port: 80
          livenessProbe:
            failureThreshold: 2
            httpGet: 
              path: /
              port: 80
