digito-ui/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: digito-ui
  labels:
    app: digito
    type: ui
spec:
  selector:
    app: digito
    type: ui
  ports:
    - name: http
      port: 80
      targetPort: 80
