digito-ui/deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digito-ui
  labels:
    app: digito-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
    - hosts:
      - digito.jtalk.me
      secretName: digito-certificate
  rules:
    - host: digito.jtalk.me
      http:
        paths:
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: digito-ui
              port:
                number: 80
